# GMJni

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Jni_IJniInterface.cpp
app/src/main/cpp/GTJAComm/GTJAGMUtil/inc/: GTCryptUtil.h
app/src/main/cpp/GTJAComm/GTJAGMUtil/src/: GTCryptUtil.cpp
app/src/main/cpp/GTJAComm/GTJAUtil/inc/: GTJAXBase64.h  GTJAXHexCode.h
app/src/main/cpp/GTJAComm/GTJAUtil/src/: GTJAXBase64.cpp  GTJAXHexCode.cpp
app/src/main/cpp/gmssl/include/openssl/: asn1.h  bio.h  bn.h  crypto.h  dh.h  dsa.h  err.h  md5.h  opensslconf-32.h  opensslconf-64.h  rsa.h  x509.h
app/src/main/cpp/gtjagm/: gmssl_err.c
app/src/main/java/com/gtja/common/jni/: IJniInterface.java
app/src/main/java/com/gtja/jni/gmandroid/: MainActivity.java
app/src/main/java/com/gtja/util/: HexUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
